# DAOU-AX-Prototype

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile
backend/scripts/: _build_exploration_notebook.py  generate_data.py
backend/src/api/: main.py
backend/src/data/: generator.py  patterns.py  schemas.py
frontend/: Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/styles/: index.css
notebooks/: 01_data_exploration.ipynb
